# linescan

./: .gitignore  CMakeLists.txt  Jamroot.jam  README.md
calib/: treppe.fcstd  treppe.step  treppe.stl
cmake/: CMakeLists.txt
doc/: Doxyfile  Linienscanner.tex
icon/: README.md
include/linescan/: align_laser.hpp  binarize.hpp  bitmap.hpp  block_signals.hpp  calc_calibration_lines.hpp  calc_laser_line.hpp  calc_line.hpp  calc_top_distance_line.hpp  calib.hpp  calib_laser.hpp  calibration.hpp  camera.hpp  camera_dock.hpp  circle.hpp  circlefind.hpp  collect_points.hpp  composed_function.hpp  control_F9S_MCL2.hpp  control_F9S_MCL3.hpp  control_F9S_base.hpp  convolution.hpp  draw.hpp  edge.hpp  erode.hpp  exception_catcher.hpp  extrinsic_parameters.hpp  gauss.hpp  histogram.hpp  intrinsic_parameters.hpp  invert.hpp  io.hpp  linear_function.hpp  live_image.hpp  load.hpp  main_window.hpp  mask_non_print.hpp  matrix.hpp  median.hpp  normelize_to_uint8.hpp  pixel_wise.hpp  (+30 more)
lang/: linescan_de.qm  linescan_de.ts
simulation/: scene.pov
src/: align_laser.cpp  calc_calibration_lines.cpp  calc_laser_line.cpp  calc_line.cpp  calc_top_distance_line.cpp  calib.cpp  calib_laser.cpp  camera.cpp  camera_dock.cpp  circle.cpp  circlefind.cpp  collect_points.cpp  control_F9S_MCL2.cpp  control_F9S_MCL3.cpp  control_F9S_base.cpp  draw.cpp  edge.cpp  extrinsic_parameters.cpp  histogram.cpp  intrinsic_parameters.cpp  live_image.cpp  load.cpp  main.cpp  main_windows.cpp  processing.cpp  save.cpp  save_edge.cpp  save_histogram.cpp  serial_port.cpp  to_image.cpp  to_pixmap.cpp  widget_calc_laser_line_dock.cpp  widget_calib.cpp  widget_calib_via_line.cpp  widget_camera_dock.cpp  widget_central_image.cpp  widget_laser_alignment.cpp  widget_live_actions.cpp  widget_live_image.cpp  widget_main_window.cpp  (+5 more)
test/: Jamroot.jam  main.cpp
user_doc/: Kurzanleitung.odt  Linienscanner.tex
